# effective-octo-enigma

./: .gitignore  CMakeLists.txt  README.md  TODO.md  error_log.txt  functions.cpp  functions.h  main.cpp
bak/: Neko.tmg  Neko.tmgfood
config/: credits.md  food.tconf
interface/: assetManager.cpp  assetManager.h  keycapButton.cpp  keycapButton.h  screen.cpp  screen.h
interface/credits/: credits.cpp  credits.h
interface/exit/: exitScreen.cpp  exitScreen.h
interface/menu/: button.cpp  button.h  menu.cpp  menu.h  programLogo.cpp  programLogo.h
interface/minigame/: coin.cpp  coin.h  flyingElement.cpp  flyingElement.h  gameOver.cpp  gameOver.h  minigame.cpp  minigame.h  minigameConnector.cpp  minigameConnector.h
interface/scoreboard/: scoreboard.cpp  scoreboard.h
interface/tamagotchiScreen/: bottomBar.cpp  bottomBar.h  bottomButton.cpp  bottomButton.h  indicator.cpp  indicator.h  indicatorBar.cpp  indicatorBar.h  tamagotchiScreen.cpp  tamagotchiScreen.h  topBar.cpp  topBar.h
interface/tamagotchiScreen/foodStuff/: foodBar.cpp  foodBar.h  foodButton.cpp  foodButton.h
mechanics/: assetManager.cpp  assetManager.h  errorHandler.cpp  errorHandler.h  foodMechanics.cpp  foodMechanics.h  game.cpp  game.h  tamagotchiMechanics.cpp  tamagotchiMechanics.h
saves/: Kotek.tmg  Kotek.tmgfood  Neko.tmg  Neko.tmgfood  Tamagotchi.tmg  Tamagotchi.tmgfood
saves/Tamagotchi/: Tamagotchi.tmg
scores/: Adam.dtf  Eve.dtf  Johny.dtf  Morpheus.dtf  Neko.dtf  Tamagotchi.dtf  Tammy.dtf  myTamagotchi.dtf
structures/: cat.cpp  cat.h  food.cpp  food.h  score.cpp  score.h  tamagotchi.cpp  tamagotchi.h
tests/: assetManagerTest.cpp  regexTest.cpp
